--- a/src/components/Line.astro
+++ b/src/components/Line.astro
@@ -1,5 +1,5 @@
 ---
-const customClass = `${Astro.props.height} self-center rounded-lg line hide z-10`
+const customClass = `${Astro.props.height} self-center rounded-lg line hide -z-10`
 ---
 
 <div class={customClass}>
