--- a/src/components/Memorie.astro
+++ b/src/components/Memorie.astro
@@ -19,4 +19,8 @@ const {text_left, text_right, title, cardImg} = Astro.props
      .hide{
         opacity: 0;
     }
+    section{
+        perspective: 1000px;
+        perspective-origin: 50% 50%;
+    } 
 </style>
