--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,15 +1,20 @@
 ---
 import Card from "./Card.astro";
-const {img, title} = Astro.props
+const {img, title, url} = Astro.props
 ---
-
-<div class='flex items-center justify-evenly flex-col hide center_card z-20'>
+<project-card class="hide center_card z-20" data-newtab_url={url}>
+<div class='flex items-center justify-evenly flex-col'>
 <img src={img} class='basis-1/2 w-80 p-4'/>
 <h5 class="basis-1/4 flex items-center">{title}</h5>
 </div>
+</project-card>
 
 
 <style>
+  project-card{
+    transform: rotateX(5deg) rotateY(15deg);
+    transition: all 0.6s ease;
+  }
     div{
 		background: rgba(255, 255, 255, 0);
 		border-radius: 16px;
@@ -19,13 +24,11 @@ const {img, title} = Astro.props
 		border: 2px solid rgba(255, 255, 255, 0.1);
 		animation-delay: var(--delay);
     height: 50vh;
-    transform: rotateX(5deg) rotateY(15deg);
-    transition: all 0.6s ease;
 	}
     .slideInWithRotation {
         animation: slide-in-bottom 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
-    div:hover{
+    project-card:hover{
         cursor: pointer;
         transform: rotateX(0deg) rotateY(0deg);
     }
@@ -59,3 +62,17 @@ const {img, title} = Astro.props
   }
 }
 </style>
+
+<script>
+  class ProjectCard extends HTMLElement {
+    constructor() {
+      super();
+
+        this.addEventListener('click', () => {
+          window.open(this.dataset.newtab_url, '_blank')
+        })
+    }
+  }
+
+  customElements.define('project-card', ProjectCard);
+</script>
