--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,26 @@
 ---
-import Card from '../components/Card.astro';
 import WebContainer from '../layouts/WebContainer.astro';
-import BigTitle from '../components/BigTitle.astro';
-import ProfileCard from '../components/ProfileCard.astro';
 import TimeLine from '../components/TimeLine.astro';
+import Header from '../components/Header.astro';
 ---
+<head>
+	<!-- Global Metadata -->
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<!-- Primary Meta Tags -->
+	<title>Johiny Dev</title>
+	<meta name="title" content="Johiny Dev" />
+	<meta name="description" content="Johiny's Projects Portfolio" />
+	<meta name="keywords" content="web, dev, development, javascript, react, astro, css, html, software" />
+	<!-- Favicon -->
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+</head>
 
 <WebContainer>
-		<BigTitle left={'0vh'} delay={0} opacity={1} zIndex={13}>Hi I'm Johiny</BigTitle>
-		<BigTitle left={'20vh'} delay={'200ms'} opacity={0.5} zIndex={12}>Hi I'm Johiny</BigTitle>
-		<div class="relative">
-			<BigTitle left={'45vh'} delay={'400ms'} opacity={0.2} zIndex={11}>Hi I'm Johiny</BigTitle>
-			<ProfileCard/>
-		</div>
+		<Header/>
 		<TimeLine/>
 </WebContainer>
+
+<script>
+
+</script>
