first version responsive working

--- a/src/components/Line.astro
+++ b/src/components/Line.astro
@@ -1,5 +1,5 @@
 ---
-const customClass = `${Astro.props.height} self-center rounded-lg line hide`
+const customClass = `h-20 lg:h-60 self-center rounded-lg line hide`
 ---
 
 <div class={customClass}>
