--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import WebContainer from '../layouts/WebContainer.astro';
 import TimeLine from '../components/TimeLine.astro';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 <head>
 	<!-- Global Metadata -->
@@ -19,6 +20,7 @@ import Header from '../components/Header.astro';
 <WebContainer>
 		<Header/>
 		<TimeLine/>
+		<Footer/>
 </WebContainer>
 
 <script>
