--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import ProfileCard from '../components/ProfileCard.astro';
 ---
 
 <div class="relative" id="headerContainer">
-    <BigTitle class="text-9xl row-start-1" delay={0} opacity={1} >Hi I'm Johiny</BigTitle>
-    <BigTitle class="text-9xl relative row-start-2 left-6" delay={'200ms'} opacity={0.5}>Hi I'm Johiny</BigTitle>
-    <BigTitle class='text-9xl relative row-start-3 left-12' delay={'400ms'} opacity={0.2}>Hi I'm Johiny</BigTitle>
+    <BigTitle class="text-9xl lg:text-[30vh] md:text-[12vh]" delay={0} opacity={1} >Hi I'm Johiny</BigTitle>
+    <BigTitle class="text-9xl relative left-6 lg:text-[30vh] md:text-[12vh] md:left-[5vh] lg:left-52" delay={'200ms'} opacity={0.5}>Hi I'm Johiny</BigTitle>
+    <BigTitle class='text-9xl relative left-12 lg:text-[30vh] md:text-[12vh] md:left-[8vh] lg:left-80' delay={'400ms'} opacity={0.2}>Hi I'm Johiny</BigTitle>
     <ProfileCard/>
 </div>
 
