--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,38 @@
 ---
 import BigTitle from '../components/BigTitle.astro';
 import ProfileCard from '../components/ProfileCard.astro';
+import { ThemeSwitch } from "astro-color-scheme";
 ---
 
 <div class="relative" id="headerContainer">
+    <ThemeSwitch strategy='button' defaultTheme="dark">
+        <div class="absolute right-0 z-30 themeSwitcher p-4 themeSwitcher">
+            <button class="bg-lightBlue h-8 w-8 absolute bg-opacity-0"/>
+            <i class="themeSwitcherIcon z-20 fa-regular fa-sun text-xl text-lightBlack dark:text-aeroBlue"></i>
+        </div>
+    </ThemeSwitch>
     <BigTitle class="text-9xl lg:text-[30vh] md:text-[12vh]" delay={0} opacity={1} >Hi I'm Johiny</BigTitle>
     <BigTitle class="text-9xl relative left-6 lg:text-[30vh] md:text-[12vh] md:left-[5vh] lg:left-52" delay={'200ms'} opacity={0.5}>Hi I'm Johiny</BigTitle>
     <BigTitle class='text-9xl relative left-12 lg:text-[30vh] md:text-[12vh] md:left-[8vh] lg:left-80' delay={'400ms'} opacity={0.2}>Hi I'm Johiny</BigTitle>
     <ProfileCard/>
 </div>
 
+<script is:inline src="https://kit.fontawesome.com/e1fe87383c.js" crossorigin="anonymous"></script>
 <script>
+const themeSwitcherIcon =  document.querySelector('.themeSwitcherIcon')
+const themeSwitcher = document.querySelector('.themeSwitcher')
+if(themeSwitcherIcon && themeSwitcher){
+    themeSwitcher.addEventListener('click', () => {
+        if(themeSwitcherIcon.classList.contains('fa-sun')){
+            themeSwitcherIcon.classList.remove('fa-sun')
+            themeSwitcherIcon.classList.add('fa-moon')
+        }
+        else if(themeSwitcherIcon.classList.contains('fa-moon')){
+            themeSwitcherIcon.classList.remove('fa-moon')
+            themeSwitcherIcon.classList.add('fa-sun')
+        }
+    })
+}
 const headerContainer: HTMLElement | null = document.querySelector('#headerContainer')
 const profileCard: HTMLElement | null = document.querySelector('#profileCard')
 if(headerContainer && profileCard){
