--- a/src/components/Line.astro
+++ b/src/components/Line.astro
@@ -1,15 +1,13 @@
 ---
-const customClass = `h-20 lg:h-60 self-center rounded-lg line hide`
 ---
 
-<div class={customClass}>
+<div class='h-20 lg:h-60 self-center dark:border-niceGray border-lightBlack rounded-lg line hide'>
 
 </div>
 
 <style>
     div{
-        z-index: -20;
-        border-left: 0.3vh solid rgba(194, 231, 217, 0.6);
+        border-left: 0.3vh solid;
     }
     .hide{
         opacity: 0;
