--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -3,7 +3,7 @@ import Card from "./Card.astro";
 import profileImg from '../media/profile.png'
 ---
 
-<div class='absolute top-64 lg:top-[60vh] md:top-32 z-10 lg:h-80 mx-2 flex flex-col w-[96%] items-center lg:flex-row animate__animated animate__bounceInLeft profileCard' id="profileCard">
+<div class='absolute border-blackText border-2 dark:text-cuteWhite text-blackText top-64 lg:top-[60vh] md:top-32 z-10 lg:h-80 mx-2 flex flex-col w-[96%] items-center lg:flex-row animate__animated animate__bounceInLeft profileCard' id="profileCard">
         <img src={profileImg} class="p-1 lg:p-5 lg:mt-auto rounded-full w-36 lg:w-72"/>  
     <div class="basis-full flex text-center">
         <h2 id="myDescription" class="self-center p-2 lg:p-5"></h2>
