--- a/src/components/BigTitle.astro
+++ b/src/components/BigTitle.astro
@@ -1,20 +1,23 @@
 ---
-const {delay} = Astro.props;
-const strokeColor = `rgba(194, 231, 217, ${Astro.props.opacity})`
+const {delay, opacity} = Astro.props;
 const customClass = `${Astro.props.class} m-0 animate__animated animate__fadeInLeft z-10`
 ---
 
 
 <h1 class={customClass}><slot></slot></h1>
 
-<style define:vars={{delay, strokeColor}}>
+<style define:vars={{delay, opacity}}>
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
     h1{
+        --textStroke:2px rgba(194, 231, 217, var(--opacity));
         font-family: 'Anton', sans-serif;
 		font-size: 30vh;
 		color: transparent;
         animation-delay: var(--delay);
-        -webkit-text-stroke: 2px var(--strokeColor);
+        -webkit-text-stroke: var(--textStroke);
         line-height: 110%;
     }
+    :root[data-theme="light"] h1{
+    --textStroke: 3px rgba(13, 2, 33, var(--opacity));
+  } 
 </style>
