--- a/src/components/Memorie.astro
+++ b/src/components/Memorie.astro
@@ -3,7 +3,7 @@ import ProjectCard from "./ProjectCard.astro";
 const {text_left, text_right, title, cardImg, url} = Astro.props
 ---
 
-<section class="flex flex-col lg:flex-row  justify-between">
+<section class="flex flex-col z-10 lg:flex-row  justify-between">
     <h3 class='p-5 hide left_text basis-1/3 text-justify'>{text_left}</h3>
     <ProjectCard img={cardImg} title={title} url={url}/>
     <h3 class='mt-auto p-5 hide right_text mr-2 basis-1/3 text-justify'>{text_right}</h3>
