--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -16,15 +16,19 @@ const {img, title, url} = Astro.props
     transition: all 0.6s ease;
   }
     div{
+    --cardShadow: 0 4px 30px rgba(47, 4, 71, 0.4)
 		background: rgba(255, 255, 255, 0);
 		border-radius: 16px;
-		box-shadow: 0 4px 30px rgba(47, 4, 71, 0.4);
+		box-shadow: var(--cardShadow);
 		backdrop-filter: blur(5px);
 		-webkit-backdrop-filter: blur(5px);
 		border: 2px solid rgba(255, 255, 255, 0.1);
 		animation-delay: var(--delay);
     height: 50vh;
 	}
+  :root[data-theme='light'] div{
+    --cardShadow:0 4px 20px rgba(18, 18, 18, 0.4)
+  }
     .slideInWithRotation {
         animation: slide-in-bottom 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
