--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Footer from '../components/Footer.astro';
 	<meta name="description" content="Johiny's Projects Portfolio" />
 	<meta name="keywords" content="web, dev, development, javascript, react, astro, css, html, software" />
 	<!-- Favicon -->
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <WebContainer>
