--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,41 +1,60 @@
 ---
-
 ---
 
-    <div class="flex flex-row miniFooter justify-center self-center gap-4 py-5 w-1/3 rounded-t-lg footerhidden animate__animated">
-        <i class="fa-brands fa-github text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"></i>
-        <i class="fa-brands fa-linkedin  text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"></i>
-        <i class="fa-brands fa-twitter  text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer "></i>
-    </div>
+<div
+  class="flex flex-col miniFooter justify-center items-center self-center w-1/3 pt-2 rounded-t-lg footerhidden animate__animated"
+>
+  <div class="flex flex-row gap-4">
+    <a href="https://github.com/johiny"
+      ><i
+        class="fa-brands fa-github text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
+      ></i>
+    </a>
+    <a href="https://www.linkedin.com/in/johan-sebastian-c-mazo/"
+      ><i
+        class="fa-brands fa-linkedin text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
+      ></i>
+    </a>
+    <a href="https://twitter.com/johinyDev"
+      ><i
+        class="fa-brands fa-twitter text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
+      ></i>
+    </a>
+  </div>
+  <h6>contact@johiny.dev</h6>
+</div>
 
 <style>
-    .miniFooter{
-        --footerColor: #222831;
-        background-color: var(--footerColor);
-    }
-    :root[data-theme='light'] .miniFooter{
-        --footerColor: #FCD8D4;
-    }
-    .footerhidden{
-        opacity: 0;
-    }
+  .miniFooter {
+    --footerColor: #222831;
+    background-color: var(--footerColor);
+  }
+  :root[data-theme="light"] .miniFooter {
+    --footerColor: #fcd8d4;
+  }
+  .footerhidden {
+    opacity: 0;
+  }
 </style>
 
-<script is:inline src="https://kit.fontawesome.com/e1fe87383c.js" crossorigin="anonymous"></script>
+<script
+  is:inline
+  src="https://kit.fontawesome.com/e1fe87383c.js"
+  crossorigin="anonymous"
+></script>
 
 <script>
- const footer = document.querySelector('.footerhidden')
- if(footer){
-     const observer = new IntersectionObserver((entries)=> {
-        entries.forEach(entry => {
-            if(entry.isIntersecting){
-                entry.target.classList.add('animate__fadeInUp')
-            }
-            else{
-                entry.target.classList.remove('animate__fadeInUp')
-            }
-        })
-     })
-     observer.observe(footer)
- }
+  const footer = document.querySelector(".footerhidden");
+  if (footer) {
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("animate__fadeInUp");
+        } else {
+          entry.target.classList.remove("animate__fadeInUp");
+        }
+      });
+    });
+    observer.observe(footer);
+  }
 </script>
