--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 ---
 
 <div
-  class="flex flex-col miniFooter justify-center items-center self-center w-1/3 pt-2 rounded-t-lg footerhidden animate__animated"
+  class="mt-8 flex flex-col miniFooter justify-center items-center self-center w-1/3 pt-2 rounded-t-lg footerhidden animate__animated"
 >
   <div class="flex flex-row gap-4">
     <a href="https://github.com/johiny"
