--- a/src/layouts/WebContainer.astro
+++ b/src/layouts/WebContainer.astro
@@ -2,7 +2,7 @@
 import 'animate.css';
 ---
 
-<div class="flex bg-lightBlue dark:bg-xiketic  flex-col z-0 overflow-x-hidden h-screen">
+<div class="flex bg-lightBlue dark:bg-xiketic  flex-col z-0 overflow-x-hidden overflow-y-hidden">
     <slot></slot>
 </div>
 <style>
