footer to top to make contact options more visible, and some minor fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import ProfileCard from '../components/ProfileCard.astro';
 import { ThemeSwitch } from "astro-color-scheme";
 ---
 
-<div class="relative lg:mb-5" id="headerContainer">
+<div class="relative lg:mb-5 lg:mt-5" id="headerContainer">
     <ThemeSwitch strategy='button' defaultTheme="dark">
         <div class="absolute right-0 z-30 themeSwitcher p-4 themeSwitcher">
             <button class="bg-lightBlue h-8 w-8 absolute bg-opacity-0"/>
