--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -11,7 +11,7 @@ import vetdata from "../media/vetdata.png"
 import cs50thoughts from "../media/cs50thoughts.png"
 ---
 
-<div class="flex flex-col mt-3 dark:text-cuteWhite text-blackText max-h-max">
+<div class="flex flex-col mt-3 dark:text-cuteWhite text-blackText max-h-max mb-10">
     <Line height='h-20'/>
     <Memorie text_left="I still remember my first website like it was yesterday. It brings back so many memories from 2010. If I were to look at it now, I would say it looks like a crazy monkey put things here and there, but that's what made it so special to me. I was just a kid at the time, barely knowing any English or much about the web. But I'll never forget the feeling of typing in my first <head> and <body> tags." text_right="My first website may have had a disastrous layout - complete with a buggy, outdated lateral menu and a background featuring my favorite anime series from when I was a kid, but it is still filled with warm, wonderful memories. Despite the broken links and images, and unsightly blue font, I look back on it with fondness. It may not have been the most polished website, but it was mine." title='My First Web' cardImg={firstWeb} url={'https://maquicosas.es.tl/Home.htm'}/>
     <Line height='h-60'/>
