--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <div
-  class="mt-10 bottom-0 flex flex-col miniFooter justify-center items-center self-center w-1/3 pt-2 rounded-t-lg"
+  class="lg:absolute lg:top-0 lg:right-32 mb-2 lg:mb-0 flex flex-col miniFooter justify-center items-center self-center px-12 py-2 rounded-b-lg z-40"
 >
   <div class="flex flex-row gap-4">
     <a href="https://github.com/johiny"
@@ -23,16 +23,27 @@
   <h6>contact@johiny.dev</h6>
 </div>
 <style>
+  @keyframes slide-in-top {
+  0% {
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
   .miniFooter {
     --footerColor: #222831;
     background-color: var(--footerColor);
+    animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both 0.9s;
   }
   :root[data-theme="light"] .miniFooter {
     --footerColor: #fcd8d4;
   }
-  .footerhidden {
-    opacity: 0;
-  }
+  
   
 </style>
 
