--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,6 +25,8 @@
 </div>
 <style>
   .miniFooter {
+    font-family: 'Source Code Pro', monospace;
+    font-weight: 100;
     --footerColor: #222831;
     background-color: var(--footerColor);
   }
