--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import BigTitle from '../components/BigTitle.astro';
 import ProfileCard from '../components/ProfileCard.astro';
 import { ThemeSwitch } from "astro-color-scheme";
+import TranslateButton from './TranslateButton.astro';
 ---
 
 <div class="relative lg:mb-5 lg:mt-5" id="headerContainer">
@@ -11,6 +12,7 @@ import { ThemeSwitch } from "astro-color-scheme";
             <i class="themeSwitcherIcon z-20 fa-regular fa-sun text-xl text-lightBlack dark:text-aeroBlue"></i>
         </div>
     </ThemeSwitch>
+    <TranslateButton/>
     <BigTitle class="text-9xl lg:text-[30vh] md:text-[12vh]" delay={0} opacity={1} >Hi I'm Johiny</BigTitle>
     <BigTitle class="text-9xl relative left-6 lg:text-[30vh] md:text-[12vh] md:left-[5vh] lg:left-52" delay={'200ms'} opacity={0.5}>Hi I'm Johiny</BigTitle>
     <BigTitle class='text-9xl relative left-12 lg:text-[30vh] md:text-[12vh] md:left-[8vh] lg:left-80' delay={'400ms'} opacity={0.2}>Hi I'm Johiny</BigTitle>
