mejora de imagenes

--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,18 +1,18 @@
 ---
 import Memorie from '../components/Memorie.astro';
 import Line from './Line.astro';
-import firstWeb from '../media/first_web.gif'
-import sf from '../media/sf.png'
-import manejaTuProyecto  from '../media/maneja_tu_proyecto_logo.png'
-import harvard_memories from '../media/harvard-memories.png'
-import devfunhome from '../media/devfun.png'
-import airman from '../media/airman_logo.png'
-import vetdata from "../media/vetdata.png"
-import cs50thoughts from "../media/cs50thoughts.png"
-import cienciadatospeludos from "../media/ciencia_datos_peludos.png"
-import simpletodo from "../media/simple_todo.png"
-import dailyadvice from "../media/daily_advice.png"
-import biorescate from "../media/bio_rescate.png"
+import firstWeb from '../media/first_web.jpg'
+import sf from '../media/sf.jpg'
+import manejaTuProyecto  from '../media/maneja_tu_proyecto_logo.jpg'
+import harvard_memories from '../media/harvard-memories.jpg'
+import devfunhome from '../media/devfun.jpg'
+import airman from '../media/airman_logo.jpg'
+import vetdata from "../media/vetdata.jpg"
+import cs50thoughts from "../media/cs50thoughts.jpg"
+import cienciadatospeludos from "../media/ciencia_datos_peludos.jpg"
+import simpletodo from "../media/simple_todo.jpg"
+import dailyadvice from "../media/daily_advice.jpg"
+import biorescate from "../media/bio_rescate.jpg"
 import SortButton from './SortButton.astro';
 ---
 
