new typewritter with speed controls working

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,17 +5,17 @@
   px-12 py-2 rounded-b-lg z-40 animate__animated animate__fadeInDown animate__delay-1s"
 >
   <div class="flex flex-row gap-4">
-    <a href="https://github.com/johiny"
+    <a href="https://github.com/johiny" title="Github Link"
       ><i
         class="fa-brands fa-github text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
       ></i>
     </a>
-    <a href="https://www.linkedin.com/in/johan-sebastian-c-mazo/"
+    <a href="https://www.linkedin.com/in/johan-sebastian-c-mazo/" title="Linkedin Link"
       ><i
         class="fa-brands fa-linkedin text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
       ></i>
     </a>
-    <a href="https://twitter.com/johinyDev"
+    <a href="https://twitter.com/johinyDev" title="Twitter Link"
       ><i
         class="fa-brands fa-twitter text-xl lg:text-2xl dark:hover:text-xiketic hover:text-[#334257] hover:cursor-pointer"
       ></i>
