--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import TimeLine from '../components/TimeLine.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 ---
+<html lang="en">
 <head>
-	<html lang="es">
 	<!-- Global Metadata -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
