pequeño arreglo de footer y big tittle

--- a/src/components/BigTitle.astro
+++ b/src/components/BigTitle.astro
@@ -1,6 +1,6 @@
 ---
 const {delay, opacity} = Astro.props;
-const customClass = `${Astro.props.class} m-0 animate__animated animate__fadeInLeft z-10`
+const customClass = `${Astro.props.class} m-0 animate__animated animate__fadeInLeft z-10 select-none`
 ---
 
 
