--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@
     background-color: var(--footerColor);
   }
   :root[data-theme="light"] .miniFooter {
-    --footerColor: #fcd8d4;
+    --footerColor: #ffffff;
   }
   
   
