boton next one funcionando

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <div
-  class="lg:absolute lg:top-0 lg:right-32 mb-2 lg:mb-0 flex flex-col miniFooter justify-center items-center self-center 
+  class="lg:fixed lg:top-0 lg:right-32 mb-2 lg:mb-0 flex flex-col miniFooter justify-center items-center self-center 
   px-12 py-2 rounded-b-lg z-40 animate__animated animate__fadeInDown animate__delay-1s"
 >
   <div class="flex flex-row gap-4">
