boton hacia inicio funcionando!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import WebContainer from '../layouts/WebContainer.astro';
 import TimeLine from '../components/TimeLine.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import ToBeginButton from '../components/ToBeginButton.astro'
 ---
 <html lang="en">
 <head>
@@ -22,6 +23,7 @@ import Footer from '../components/Footer.astro';
 		<Footer/>
 		<Header/>
 		<TimeLine/>
+		<ToBeginButton/>
 </WebContainer>
 
 <script>
